Edits to SpectrumInteractions

--- a/SpectrumInteractions.Rmd
+++ b/SpectrumInteractions.Rmd
@@ -2,7 +2,7 @@
 title: "The axes of interspecific interactions"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
+output: tint::tintHtml
 latexfonts:
   - package: newtxmath
     options: 
@@ -32,23 +32,25 @@ library(simecol) # for running model
 theme_set(theme_minimal())
 ```
 
-`r newthought("From time immemorial")`^[How's that for a first line?] species have interacted. One species might have stolen another's food, or eaten some or part of the other species, or found a way to make a living on or inside the other one. Or perhaps they helped each other, directly or indirectly. And often, one would assume, they mostly ignored each other. Or, for a less ephemeral sort of introduction, see any nature documentary. Species interact, often, in myriad ways. 
+`r newthought("From time immemorial")`^[How's that for a first line?] species have interacted. One species might have stolen another's food, or eaten some or part of the other species, or found a way to make a living on or inside the other one. Or perhaps they helped each other, directly or indirectly. And often, one would assume, they mostly ignored each other. Or, for a visceral introduction, see any nature documentary. Species interact, often, in myriad ways. 
 
-My purpose, here, is to bring some clarity to these interspecific interactions, to provide some axes of the interactions, if not to provide clear-cut bins in which every interaction can comfortably fit. So let's start at the beginning.
+My purpose, here, is to bring some clarity to these _inter_specific interactions, to provide some axes along which to sort these interactions, if not to provide clear-cut bins in which every interaction can comfortably fit. So let's start at the beginning.
 
 # The _matrix_ of interactions
 
-Probably the simplest way to organize interspecific interactions is to consider the effect of the interaction on both players^[By "effect" we ultimately mean the effect on an individual's fitness, but usually we just mean something like effect on growth or survival or reproduction, or even energetic reserves or something else we can easily measure.]. These can either be positive (+), neutral (0), or negative (-) for each player. We can place these in a matrix, of sorts, where say the columns represent the effects on species A and the rows the effects on species B. 
+Probably the simplest way to organize interspecific interactions is to consider the effect of the interaction on both players^[By "effect" we ultimately mean the effect on an individual's fitness, but usually we just mean something like the effect on growth or survival or reproduction, or even energetic reserves or something else we can easily measure.]. These can either be positive (+), neutral (0), or negative (-) for each player. We can place these in a matrix, of sorts, where  the columns represents the effects of the interaction on species A and the rows the effects on species B. 
 
 |   |         -         |       0      |         +         |
 |---|:-----------------:|:------------:|:-----------------:|
-| + | pred/herb/parasit | commensalism |  mutualism |
-| 0 |   amensalism   |  neutralism  |     commensalism    |
-| - | competition |  amensalism  |    pred/herb/parasit    |
+| + | pred/herb/parasit | commensalism |  mutualism        |
+| 0 |   amensalism      |  neutralism  |  commensalism     |
+| - | competition       |  amensalism  |  pred/herb/parasit  |
 
-I'm guessing you've seen most of these, though amensalisms are not often considered. So easy-peasy, right?
+I'm guessing you've seen most of these labels, though amensalisms are not often considered. So easy-peasy, right?
 
-Not so fast. Before getting into the weeds, it is worth noting that while I have made this into a nice, neat table, the effects are better of thought of as _continuous_.  For instance, there might be slightly negative impacts of an interaction that are closer to neutral than a very strongly negative impact. So instead of thinking of interactions as falling into one of these bins, imagine them as occurring on a plot^[The actual numbers in the plot do not mean much... just the sign and magnitude.] where each axis represents the effect on the one of the two interacting species.
+## _Axes_ of interactions
+
+Not so fast! While we often see the range of interspecific interactions in the form of a nice, neat table, the effects of the interactions on each player are much more accurately thought of as _continuous_.  For instance, one interaction might be _slightly_ negative, bordering on neutral, while anothr might be strongly negative. Are those equivalent? Probably not. So instead of thinking of interactions as falling into one of these bins in the table, imagine them as occurring along axes of interaction strengths^[The actual numbers in the plot do not mean much... just the sign and magnitude.] representing the effect on each of the two interacting species.
 
 ```{r}
 df <- expand_grid(A = -1:1, B = -1:1) %>% 
@@ -68,11 +70,11 @@ ggplot(df, aes(A, B)) +
   
 ```
 
-While there are labels, the boundaries between them are often pretty unclear. Let's imagine that the red dot on the graph represents the interaction between a skin bacterium and its vertebrate host. Should we call it a parasitic interaction since Species B (the bacterium) gains a lot at the cost of Species A (the host), or a commensalism, since the effect on species A is negligible? Nature doesn't care.
+You will see the same labels, but the boundaries between them are intentionally vague. For instance, imagine that the red dot on the graph represents the interaction between a skin bacterium and its vertebrate host. Should we call it a parasitic interaction since Species B (the bacterium) gains a lot at the cost of Species A (the host), or a commensalism, since the effect on species A is negligible? Nature doesn't care how we label it; the important part is the impact on each species.
 
 # Many interactions means muddled categorization
 
-Another key problem with our nice, neat categorization is that a particular interaction can exist at multiple places on the axes at the same time!^[In part, because while we are considering just two species, there are many individuals of each species that interact.]  Let's make our example (the red dot, above) more specific. Let's consider [_Staphylococcus aureus_](https://en.wikipedia.org/wiki/Staphylococcus_aureus), a common and normal part of our skin and even gut microbiota. So the host-bacterial interaction is sort of like I drew on the graph, above. Except that _S. aureus_ is also known for causing horrendous skin infections, blood and bone infections, and food poisoning which are collectively linked to tens of thousands of deaths a year in the U.S.A. So...is it a parasite or commensal? <shrug> 
+Another key problem with our nice, neat categorization is that a particular interaction can exist at multiple places on the axes at the same time!^[In part, because while we are considering just two species, there are many individuals of each species that interact.]  Let's make our example (the red dot, above) more specific.  [_Staphylococcus aureus_](https://en.wikipedia.org/wiki/Staphylococcus_aureus) is a common and normal part of our skin and even gut microbiota. Our interaction with _S. aureus_ is rather like the dot I drew on the graph, above. Except  _S. aureus_ is _also_ known for causing horrendous skin infections, blood and bone infections, and food poisoning which are collectively linked to tens of thousands of deaths a year in the U.S.A. So...is it a parasite or commensal? <shrug> 
 
 ```{r}
 df2 <- tibble(x = -0.05 - rexp(200, rate = 5), 
@@ -90,15 +92,17 @@ last_plot() +
 
 
 # Symbioses are fluid
-Why does this normal, largely benign commensal-ish bacterium occasionally kill people? The short answer is that context matters. Yes, there are more virulent types that have one way or another picked up the genetic capacity to secrete enzymes, toxins, and more that can turn them from potentially harmful to outright dangerous^[Bacteria are famously, ah...permissive of sharing mobile genetic elements, recombination, and so on.  Many are the experiments where the pathogenic bacteria fails to cause any damage because it somehow lost its plasmid with virulence factors.]. But more broadly, _S. aureus_ tends to be an opportunistic infection. 
+Why does this normal, largely benign commensal-ish bacterium occasionally kill people? The short answer is that context matters. Yes, there are more virulent types that have in one way or another picked up the genetic capacity to secrete enzymes, toxins, and so on that can turn them from potentially harmful to outright dangerous^[Bacteria are famously, ah...permissive of sharing mobile genetic elements, recombination, and so on.]. But more broadly, _S. aureus_ tends to be an opportunistic infection. 
 
-These bacteria happily make a living on the skin of many people, primarily digesting dead skin and whatever else is available. But given the opportunity it may well enter a wound or scrape and start to grow; it's a nice warm, wet, nutrient rich environment, after all! It hasn't changed, but the nature of the relationships has; you now have a pus-filled wound^[The pus is mostly white blood cells attacking the bacteria.]. And if the host's immune system is not able to control its growth, well that's where the problems lay.
+These bacteria happily make a living on the skin of many people, primarily digesting dead skin and whatever else is available. However, given the opportunity it may well enter a wound in the skin and start to grow; it's a nice warm, wet, nutrient rich environment, after all! It hasn't changed, but the nature of the relationships has; you now have a pus-filled wound^[The pus is mostly white blood cells attacking the bacteria.]. And if the host's immune system is unable to control _S. aureus_'s growth, well that's a problem.
 
-Similarly, _Candidia albicans_ is a normally commensal yeast found in the gut flora of roughly half of human adults. It is also an important cause of vaginal yeast infections and thrush, but can even cause systemic infections. In what populations is most commonly observed causing problematic infections? The very young, the very old, and the otherwise immunocompromised (e.g., those undergoing chemotherapy, AIDS patients). Sure, these are opportunistic parasites, but the same context dependence is also common in obligate parasites.
+Similarly, _Candidia albicans_ is a normally commensal yeast found in the gut flora of roughly half of human adults, but is also an important cause of vaginal yeast infections and thrush. It can even cause systemic infections. Under what conditions do we tend to see these more problematic _Candidia_ infections? In the very young, the very old, and the otherwise immunocompromised (e.g., those undergoing chemotherapy, AIDS patients).
 
-The reverse is also true. Just like when a friend overstays their welcome, seemingly mutualistic interactions can become commensal or even parasitic given the right setting. One cool example comes from mycorrhizal fungi who typically provide hard-to-get nutrients, such as phosphorus, to their hosts plants, who in return provide sugars. What happens if you fertilize the plant with phosphorus? It stops giving the myrorrhizae sugars and may even kick them out^[(See, for instance, [Kiers et al. 2011. Reciprocal rewards stabilize cooperation in the mycorrhizal symbiosis. Science 333:880-882.](https://www.researchgate.net/publication/51566071_Reciprocal_Rewards_Stabilize_Cooperation_in_the_Mycorrhizal_Symbiosis))]. What were once key business partners suddenly became free-loading parasites! 
+Yes, both examples are opportunistic parasites, but the same context dependence is also common in obligate parasites. SARS-CoV-2, for instance, is well known to cause infections that vary from barely noticeable to quite deadly, and at least some of that variation is attributable context including "pre-existing conditions."
 
-Many things push a relatively benign symbiosis towards a more parasitic interaction (or vice versa). Conditions like temperature are very important for infections in ectotherms. Nutrient and energetic status of the host is often important. Dose and immune status (think immunocompromised vs. tolerant hosts) and the presence of other organisms can all change the nature of a symbiotic relationship. We will discuss some of these factors, but honestly, the range of important factors span the whole of immunology and physiology and nutrition and ecology. Suffice to say, what may clearly be a parasite in one context may be a commensal or even a mutualist in another. 
+Even mutalisms can turn sour. Just like when a friend overstays their welcome, seemingly mutualistic interactions can become commensal or even parasitic given the right setting. One cool example comes from mycorrhizal fungi who typically provide hard-to-get nutrients, such as phosphorus, to their hosts plants, who in return provide sugars. What happens if you fertilize the plant with phosphorus? It stops giving the myrorrhizae sugars and may even kick them out^[(See, for instance, [Kiers et al. 2011. Reciprocal rewards stabilize cooperation in the mycorrhizal symbiosis. Science 333:880-882.](https://www.researchgate.net/publication/51566071_Reciprocal_Rewards_Stabilize_Cooperation_in_the_Mycorrhizal_Symbiosis))]. What were once key business partners suddenly became free-loading parasites! 
+
+Many things can push a relatively benign symbiosis towards a more parasitic interaction (or vice versa). Temperature can be very important for microbial symbioses in ectotherms. Nutrient and energetic status of the host is often important, too. Dose and immune status (think immunocompromised vs. tolerant hosts) and the presence of other organisms can all change the nature of a symbiotic relationship. We will discuss some of these factors, but honestly, the range of important factors span the whole of immunology and physiology and nutrition and ecology. Suffice to say, what may clearly be a parasite in one context may be a commensal or even a mutualist in another. 
 
 # Other dimentions
 
@@ -106,11 +110,11 @@ We define interspecific interactions in all sorts of ways beyond just their rela
 
 ## Closeness or duration of the interaction
 
-You have probably learned about "symbioses"^[And probably equated them, wrongly, with mutualisms.]. The term symbiosis is Latin derived from the Greek sumbiōsis ‘a living together’, which is derived from from sumbios or ‘companion’. In English, symbiosis means two different organisms living in close physical proximity for long periods. Often one player is larger and plays host to the other player, which is often called a symbiont. So while an epiphyte^[A plant growing on another plant.] growing on a host tree might be considered a symbiont the same way that rhizobial bacteria are, since they are much closer to the same size this designation is rarely used. Lastly, while the relationship is often thought of as mutually advantageous, it need not be the case. So most parasitisms would be symbioses, predation and herbivory usually would not. 
+You have probably learned about "symbioses"^[And probably equated them, wrongly, with mutualisms.]. The term symbiosis is Latin derived from the Greek sumbiōsis ‘a living together’, which is derived from from sumbios or ‘companion’. In English, symbiosis means two different organisms living in close physical proximity for long periods. Often one player is larger and plays host to the other, which is often called a symbiont. So while an epiphyte^[A plant growing on another plant.] growing on a host tree might be considered a symbiont the same way that rhizobial bacteria are, since they are much closer to the same size this designation is rarely used. Lastly, while the relationship is often thought of as mutually advantageous, it need not be the case. So most parasitisms would be symbioses, predation and herbivory usually would not. 
 
 ## Parts or wholes, one vs. many
 
-Notice that we have lumped predation, herbivory, and parasitism all together based on the effects on the two players. But this seems a bit wrong, doesn't it? Indeed, you probably have a strong gut feeling that they are not, in fact, the same, but perhaps lack the words for _why_ they are different. First, we can contrast predation and herbivory pretty easily, without even needing to invoke the plant vs. animal distinction. Predators kill the whole organism and then eat some or all of it^[OK, sometimes the order is reversed.] while herbivores eat _part_ of the organism, but do not necessarily kill it^[It helps that plants are modular, so eating a leaf or branch is much less damaging to the whole than, say, eating the leg off an antelope.]. Of course parasites eat parts of their hosts and do not necessarily kill it, so by this definition are they herbivores? Not if we throw in the second distinction. Parasites tend to be much smaller than their hosts and often _many_ will infect (and eat) one single host. Contrast that with herbivores and predators, who are closer to the size of or larger than what they eat and where one individual will consume (parts of) many hosts. 
+Notice that we have lumped predation, herbivory, and parasitism all together on the axes above based on the effects the two players have on each other. But this seems a bit wrong, doesn't it? Indeed, you probably have a strong gut feeling that they are not, in fact, the same, but perhaps lack the words to explain _why_ they are different. First, we can contrast predation and herbivory pretty easily, without even needing to invoke the plant vs. animal distinction. Predators kill the whole organism and then eat some or all of it^[OK, sometimes the order is reversed.] while herbivores eat _part_ of the organism, but do not necessarily kill it^[It helps that plants are modular, so eating a leaf or branch is much less damaging to the whole than, say, eating the leg off an antelope.]. Of course parasites eat parts of their hosts and do not necessarily kill it, so by this definition are they herbivores? Not if we throw in the second distinction. Parasites tend to be much smaller than their hosts and often _many_ will infect (and eat) one single host. Contrast that with herbivores and predators, who are closer to the size of or larger than what they eat and where one individual will consume (parts of) many hosts. 
 
-Can you think of exceptions to these distinctions? Yes? Of course! We are, once again, trying to organize our thinking by placing nature on particular axes. But of course, nature doesn't care. My goal is not that you can now place every interspecific interaction neatly into categories, but that you start to think about the axes of these interactions that help us understand them better. 
+Can you think of exceptions to these distinctions? Yes, of course! We are, once again, trying to organize our thinking by placing nature on particular axes. But of course, nature doesn't care. There are all sorts of gray areas. My goal is not that you can now place every interspecific interaction neatly into categories, but that you start to think about the axes of these interactions that help us understand them better. 
 
